CHANGELOG Roundcube Webmail
===========================

- Fix regression in LDAP fuzzy search where it always used prefix search instead (#5713)
- Fix bug where base_dn setting was ignored inside group_filters (#5720)

RELEASE 1.1.8
-------------
- Fix bug where mail content frame couldn't be reset in some corner cases (#5608)
- Fix regression where groups with email address were resolved to its members' addresses
- Fix so group/addressbook selection is retained on page refresh
- Fix bug where signature couldn't be added above the quote in Firefox 51 (#5628)
- Fix so microseconds macro (u) in log_date_format works (#1490446)
- Fix XSS issue in handling of a style tag inside of an svg element

RELEASE 1.1.7
-------------
- Fix vulnerability in handling of mail()'s 5th argument

RELEASE 1.1.6
-------------
- Searching in both contacts and groups when LDAP addressbook with group_filters option is used
- Use contact_search_name format in popup on results in compose contacts search
- Fix missing localization of HTML editor when assets_dir != INSTALL_PATH
- Fix handling of blockquote tags with mixed case on html2text conversion (#5363)
- Fix message list multi-select/deselect issue (#5219)
- Fix bug where contact search menu fields where always unchecked in Larry skin
- Fix XSS issue in href attribute on area tag (#5240)
- Fix bug where message list columns could be in wrong order after column drag-n-drop and list sorting
- Don't create multipart/alternative messages with empty text/plain part (#5283)
- Wash position:fixed style in HTML mail for better security (#5264)
- Fix error causing empty INBOX listing in Firefox when using an URL with user:password specified (#5400)

RELEASE 1.1.5
-------------
- Plugin API: Add html2text hook
- Plugin API: Added addressbook_export hook
- Fix missing emoticons on html-to-text conversion
- Fix random "access to this resource is secured against CSRF" message at logout (#4956)